@@ -77,6 +77,7 @@ shadow-4.1.4.3 -> shadow-4.1.5					UNRELEASED
     it. If it does not exist, a warning is issued, but no failure.
   * Do not remove a group with the same name as the user (usergroup) if
     this group isn't the user's primary group.
+  * Add --root option.
 - usermod
   * Accept options in any order (username not necessarily at the end)
   * When the shadow file exists but there are no shadow entries, an entry
